Fix compositions to take into account masks visibility

Before this commit, masks visibility wasn't taken into account
in Compositions. This commit ensures it is.

BUG:463408